attached_assets/Pasted--home-runner-workspace-node-modules-express-lib-router-index-js-469-throw-new-TypeError-Rout-1753051615382_1753051615383.txt
/home/runner/workspace/node_modules/express/lib/router/index.js:469
      throw new TypeError('Router.use() requires a middleware function but got a ' + gettype(fn))
      ^

TypeError: Router.use() requires a middleware function but got a undefined
    at Function.use (/home/runner/workspace/node_modules/express/lib/router/index.js:469:13)
    at Function.<anonymous> (/home/runner/workspace/node_modules/express/lib/application.js:227:21)
    at Array.forEach (<anonymous>)
    at Function.use (/home/runner/workspace/node_modules/express/lib/application.js:224:7)
    at Object.<anonymous> (/home/runner/workspace/server.js:445:5)
    at Module._compile (node:internal/modules/cjs/loader:1469:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1548:10)
    at Module.load (node:internal/modules/cjs/loader:1288:32)
    at Module._load (node:internal/modules/cjs/loader:1104:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:173:12)

Node.js v20.18.1
[nodemon] app crashed - waiting for file changes before starting...
[nodemon] restarting due to changes...
[nodemon] starting `node server.js`
DATABASE_DSN value: Set (length: 107)
DATABASE_DSN starts with: mongodb+srv://flixtv...
Cleaned DATABASE_DSN starts with: mongodb+srv://flixtv...
CONNECTION STRING VALIDATION: { hasMongoPrefix: true, actualPrefix: 'mongodb+srv://f' }
/home/runner/workspace/controllers/MonitoringController.js:364
const moment = require('moment');
      ^

SyntaxError: Identifier 'moment' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1378:20)
    at Module._compile (node:internal/modules/cjs/loader:1428:41)
    at Module._extensions..js (node:internal/modules/cjs/loader:1548:10)
    at Module.load (node:internal/modules/cjs/loader:1288:32)
    at Module._load (node:internal/modules/cjs/loader:1104:12)
    at Module.require (node:internal/modules/cjs/loader:1311:19)
    at require (node:internal/modules/helpers:179:18)
    at Object.<anonymous> (/home/runner/workspace/routes/monitoring.js:4:30)
    at Module._compile (node:internal/modules/cjs/loader:1469:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1548:10)

Node.js v20.18.1
[nodemon] app crashed - waiting for file changes before startin